<resources>
    <string name="app_name">My WebBot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="go">Go!</string>
    <string name="search">Type address...</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="reload">reload</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bookmark">BookMarks</string>
    <string name="nav_tab">Add Tab</string>
    <string name="nav_history">History</string>
    <string name="img_setting">imgS</string>
    <string name="imgage_setting">imgSetting</string>
    <string name="toggle">toggle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
