<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ngh.huuduc197.myapplication.fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button

        android:background="#d20453"
        android:id="@+id/btnGo"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        android:text="@string/go" />

    <EditText

        android:id="@+id/edtsearch"
        android:layout_width="179dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btnGo"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName" />

    <ImageButton

        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/back"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/next"
        android:background="@null"
        android:src="@drawable/icons8_back_26" />
    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@string/next"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/reload"
        android:background="@null"
        android:src="@drawable/icons8_next_26" />

    <ImageButton
        android:contentDescription="@string/reload"
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/icons8_reload_26" />
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGo" >

    </WebView>



</RelativeLayout>

</FrameLayout>
